Add Get All Finance From User Id
