# models/Finance/finance.go
@@ -1,8 +1,9 @@
 package finance
 
 type Finance struct {
-	Finance_id int64 `json:"finance_id"`
-	Name  string `json:"name"`
-	Count int    `json:"count"`
-	Sub   string `json:"sub"`
+	Finance_id int64  `json:"finance_id"`
+	Name       string `json:"name"`
+	Count      int    `json:"count"`
+	Sub        string `json:"sub"`
+	User_id    int    `json:"user_id"`
 }
